<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_500"
            app:expandedTitleMarginStart="10dp"
            app:expandedTitleMarginEnd="26dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/barbary"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginTop="10dp"
               android:text="@string/title1"
               android:textSize="23sp"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:layout_weight="1"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/title2"
               android:textColor="@color/black"
               android:textStyle="bold"

               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginTop="16dp"
               android:layout_marginStart="6dp"
               android:text="@string/description1"
               android:textSize="18sp"
               android:layout_weight="1"
               />
           <TextView
               android:id="@+id/barbary_pirates"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginStart="6dp"
               android:layout_marginTop="20dp"
               android:text="@string/description4"
               android:textSize="22sp"
               android:textColor="@color/black"
               android:textStyle="bold"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginStart="6dp"
               android:text="@string/description3"
               android:layout_marginTop="15dp"
               android:textSize="18sp"
               />
       </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fb_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        android:backgroundTint="@color/fb_background"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>